--- a/Layouts/CharacterSelection.xml
+++ b/Layouts/CharacterSelection.xml
@@ -90,41 +90,6 @@
             <blend-mode>0</blend-mode>
             <effect-fallback>0</effect-fallback>
             <instances>
-                <instance type="CharacterSelector" uid="32">
-                    <properties>
-                        <initial-visibility>Visible</initial-visibility>
-                        <initial-animation>Default</initial-animation>
-                        <initial-frame>1</initial-frame>
-                        <collisions>Enabled</collisions>
-                    </properties>
-                    <instance-variables>
-                        <CharacterNumber>1</CharacterNumber>
-                        <PlayerNumber>0</PlayerNumber>
-                        <IsAlreadySelected>false</IsAlreadySelected>
-                        <IsLocked>0</IsLocked>
-                    </instance-variables>
-                    <effect-instances>
-                        <effect-instance type="HexagonalPixellate">
-                            <parameters>
-                                <scale>160</scale>
-                            </parameters>
-                        </effect-instance>
-                    </effect-instances>
-                    <blend-mode>0</blend-mode>
-                    <effect-fallback>0</effect-fallback>
-                    <world>
-                        <x>875</x>
-                        <y>1230</y>
-                        <z>0</z>
-                        <width>250</width>
-                        <height>250</height>
-                        <depth>0</depth>
-                        <hotspotX>0.500169337</hotspotX>
-                        <hotspotY>0.500169337</hotspotY>
-                        <angle>0</angle>
-                        <opacity>1</opacity>
-                    </world>
-                </instance>
                 <instance type="CharacterSelector" uid="62">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
@@ -154,8 +119,8 @@
                         <width>250</width>
                         <height>250</height>
                         <depth>0</depth>
-                        <hotspotX>0.500169337</hotspotX>
-                        <hotspotY>0.500169337</hotspotY>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
@@ -189,8 +154,8 @@
                         <width>250</width>
                         <height>250</height>
                         <depth>0</depth>
-                        <hotspotX>0.500169337</hotspotX>
-                        <hotspotY>0.500169337</hotspotY>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
@@ -224,8 +189,8 @@
                         <width>250</width>
                         <height>250</height>
                         <depth>0</depth>
-                        <hotspotX>0.500169337</hotspotX>
-                        <hotspotY>0.500169337</hotspotY>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
@@ -636,14 +601,14 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>375</x>
-                        <y>750</y>
+                        <x>375.5</x>
+                        <y>749.5</y>
                         <z>0</z>
                         <width>500</width>
                         <height>500</height>
                         <depth>0</depth>
-                        <hotspotX>0.500500023</hotspotX>
-                        <hotspotY>0.500500023</hotspotY>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
@@ -661,14 +626,14 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>2125</x>
-                        <y>750</y>
+                        <x>2124.5</x>
+                        <y>749.5</y>
                         <z>0</z>
                         <width>-500</width>
                         <height>500</height>
                         <depth>0</depth>
-                        <hotspotX>0.500500023</hotspotX>
-                        <hotspotY>0.500500023</hotspotY>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
@@ -726,6 +691,41 @@
                         <z>0</z>
                         <width>1000</width>
                         <height>125</height>
+                        <depth>0</depth>
+                        <hotspotX>0.5</hotspotX>
+                        <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="CharacterSelector" uid="138">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>1</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <instance-variables>
+                        <CharacterNumber>1</CharacterNumber>
+                        <PlayerNumber>0</PlayerNumber>
+                        <IsAlreadySelected>false</IsAlreadySelected>
+                        <IsLocked>0</IsLocked>
+                    </instance-variables>
+                    <effect-instances>
+                        <effect-instance type="HexagonalPixellate">
+                            <parameters>
+                                <scale>160</scale>
+                            </parameters>
+                        </effect-instance>
+                    </effect-instances>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>875</x>
+                        <y>1230</y>
+                        <z>0</z>
+                        <width>250</width>
+                        <height>250</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
                         <hotspotY>0.5</hotspotY>
