--- a/Layouts/Intro.xml
+++ b/Layouts/Intro.xml
@@ -129,39 +129,13 @@
                     </properties>
                     <instance-variables>
                         <Order>3</Order>
-                        <Value>Tutorial</Value>
+                        <Value>Credits</Value>
                     </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
                         <x>1250</x>
                         <y>750</y>
-                        <z>0</z>
-                        <width>500</width>
-                        <height>150</height>
-                        <depth>0</depth>
-                        <hotspotX>0.5</hotspotX>
-                        <hotspotY>0.5</hotspotY>
-                        <angle>0</angle>
-                        <opacity>1</opacity>
-                    </world>
-                </instance>
-                <instance type="IntroMenuButton" uid="16">
-                    <properties>
-                        <initial-visibility>Visible</initial-visibility>
-                        <initial-animation>Default</initial-animation>
-                        <initial-frame>0</initial-frame>
-                        <collisions>Enabled</collisions>
-                    </properties>
-                    <instance-variables>
-                        <Order>4</Order>
-                        <Value>Quit</Value>
-                    </instance-variables>
-                    <blend-mode>0</blend-mode>
-                    <effect-fallback>0</effect-fallback>
-                    <world>
-                        <x>1250</x>
-                        <y>1000</y>
                         <z>0</z>
                         <width>500</width>
                         <height>150</height>
@@ -213,7 +187,7 @@
                 </instance>
                 <instance type="IntroMenuText" uid="18">
                     <properties>
-                        <text>Tutorial</text>
+                        <text>Credits</text>
                         <initial-visibility>Visible</initial-visibility>
                         <font>Arial,-37,400,0</font>
                         <color>0,0,0</color>
@@ -240,45 +214,6 @@
                     <world>
                         <x>1250</x>
                         <y>750</y>
-                        <z>0</z>
-                        <width>450</width>
-                        <height>100</height>
-                        <depth>0</depth>
-                        <hotspotX>0.5</hotspotX>
-                        <hotspotY>0.5</hotspotY>
-                        <angle>0</angle>
-                        <opacity>1</opacity>
-                    </world>
-                </instance>
-                <instance type="IntroMenuText" uid="19">
-                    <properties>
-                        <text>Quit</text>
-                        <initial-visibility>Visible</initial-visibility>
-                        <font>Arial,-37,400,0</font>
-                        <color>0,0,0</color>
-                        <horizontal-alignment>Center</horizontal-alignment>
-                        <vertical-alignment>Center</vertical-alignment>
-                        <hotspot>Center</hotspot>
-                        <wrapping>Word</wrapping>
-                        <line-height>0</line-height>
-                    </properties>
-                    <instance-variables>
-                        <Order>4</Order>
-                    </instance-variables>
-                    <effect-instances>
-                        <effect-instance type="SetColor">
-                            <parameters>
-                                <blue>1</blue>
-                                <green>1</green>
-                                <red>1</red>
-                            </parameters>
-                        </effect-instance>
-                    </effect-instances>
-                    <blend-mode>0</blend-mode>
-                    <effect-fallback>0</effect-fallback>
-                    <world>
-                        <x>1250</x>
-                        <y>1000</y>
                         <z>0</z>
                         <width>450</width>
                         <height>100</height>
