Aliens move depending of their type (melee or ranged).

--- a/Layouts/Level1.xml
+++ b/Layouts/Level1.xml
@@ -603,6 +603,8 @@
                         <CanAttack>true</CanAttack>
                         <IsStunned>false</IsStunned>
                         <SpecialPointsGivenWhenHit>5</SpecialPointsGivenWhenHit>
+                        <Type>2</Type>
+                        <AttackTimer>0</AttackTimer>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="DestroyOutsideLayout" />
@@ -669,6 +671,8 @@
                         <CanAttack>true</CanAttack>
                         <IsStunned>false</IsStunned>
                         <SpecialPointsGivenWhenHit>5</SpecialPointsGivenWhenHit>
+                        <Type>1</Type>
+                        <AttackTimer>0</AttackTimer>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="DestroyOutsideLayout" />
@@ -735,6 +739,8 @@
                         <CanAttack>true</CanAttack>
                         <IsStunned>false</IsStunned>
                         <SpecialPointsGivenWhenHit>5</SpecialPointsGivenWhenHit>
+                        <Type>1</Type>
+                        <AttackTimer>0</AttackTimer>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="DestroyOutsideLayout" />
@@ -875,6 +881,8 @@
                         <CanAttack>true</CanAttack>
                         <IsStunned>false</IsStunned>
                         <SpecialPointsGivenWhenHit>5</SpecialPointsGivenWhenHit>
+                        <Type>2</Type>
+                        <AttackTimer>0</AttackTimer>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="DestroyOutsideLayout" />
@@ -941,6 +949,8 @@
                         <CanAttack>true</CanAttack>
                         <IsStunned>false</IsStunned>
                         <SpecialPointsGivenWhenHit>5</SpecialPointsGivenWhenHit>
+                        <Type>1</Type>
+                        <AttackTimer>0</AttackTimer>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="DestroyOutsideLayout" />
@@ -1007,6 +1017,8 @@
                         <CanAttack>true</CanAttack>
                         <IsStunned>false</IsStunned>
                         <SpecialPointsGivenWhenHit>5</SpecialPointsGivenWhenHit>
+                        <Type>1</Type>
+                        <AttackTimer>0</AttackTimer>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="DestroyOutsideLayout" />
@@ -1073,6 +1085,8 @@
                         <CanAttack>true</CanAttack>
                         <IsStunned>false</IsStunned>
                         <SpecialPointsGivenWhenHit>5</SpecialPointsGivenWhenHit>
+                        <Type>2</Type>
+                        <AttackTimer>0</AttackTimer>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="DestroyOutsideLayout" />
@@ -1139,6 +1153,8 @@
                         <CanAttack>true</CanAttack>
                         <IsStunned>false</IsStunned>
                         <SpecialPointsGivenWhenHit>5</SpecialPointsGivenWhenHit>
+                        <Type>1</Type>
+                        <AttackTimer>0</AttackTimer>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="DestroyOutsideLayout" />
@@ -1205,6 +1221,8 @@
                         <CanAttack>true</CanAttack>
                         <IsStunned>false</IsStunned>
                         <SpecialPointsGivenWhenHit>5</SpecialPointsGivenWhenHit>
+                        <Type>1</Type>
+                        <AttackTimer>0</AttackTimer>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="DestroyOutsideLayout" />
@@ -1271,6 +1289,8 @@
                         <CanAttack>true</CanAttack>
                         <IsStunned>false</IsStunned>
                         <SpecialPointsGivenWhenHit>5</SpecialPointsGivenWhenHit>
+                        <Type>2</Type>
+                        <AttackTimer>0</AttackTimer>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="DestroyOutsideLayout" />
@@ -1337,6 +1357,8 @@
                         <CanAttack>true</CanAttack>
                         <IsStunned>false</IsStunned>
                         <SpecialPointsGivenWhenHit>5</SpecialPointsGivenWhenHit>
+                        <Type>1</Type>
+                        <AttackTimer>0</AttackTimer>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="DestroyOutsideLayout" />
@@ -1403,6 +1425,8 @@
                         <CanAttack>true</CanAttack>
                         <IsStunned>false</IsStunned>
                         <SpecialPointsGivenWhenHit>5</SpecialPointsGivenWhenHit>
+                        <Type>1</Type>
+                        <AttackTimer>0</AttackTimer>
                     </instance-variables>
                     <behavior-instances>
                         <behavior-instance type="DestroyOutsideLayout" />
