Changed the name of one sprite.

--- a/Layouts/Level1.xml
+++ b/Layouts/Level1.xml
@@ -526,7 +526,7 @@
                         <opacity>1</opacity>
                     </world>
                 </instance>
-                <instance type="FightPoint" uid="203">
+                <instance type="EventPoint" uid="203">
                     <properties>
                         <initial-visibility>Visible</initial-visibility>
                         <initial-animation>Default</initial-animation>
